Archive2/fd/145edcf74a6166/output
main.cpp: In function 'int main()':
main.cpp:23:5: error: 'Statck' was not declared in this scope
     Statck<int> s1;
     ^
main.cpp:23:12: error: expected primary-expression before 'int'
     Statck<int> s1;
            ^
main.cpp:24:18: error: expected primary-expression before '>' token
     Statck<string> s1;
                  ^
main.cpp:24:20: error: 's1' was not declared in this scope
     Statck<string> s1;
                    ^
