Archive2/fd/145edcf74a6166/main.cpp
#include <iostream>
#include <string>
using namespace std;

template <typename T>
class Stack
{
    private:
    T* items;int top=0, size=0;
    public:
    void Push(T items)
    {
        
    }
    T Pop()
    {
        return 0;
    }
};

int main()
{
    Statck<int> s1;
    Statck<string> s1;
    
    return 0;
}


